--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -58,3 +58,34 @@
   justify-content: center;
   align-items: center;
 }
+
+.card-hover {
+  transition: box-shadow 0.1s ease-in-out;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.modal-from-bottom {
+  display: flex;
+  align-items: flex-end;
+  height: 100%;
+}
+
+.modal-dialog {
+  margin-bottom: 0;
+}
+
+.rounded-meme{
+  border-radius: 20px;
+}
+
+@media (min-width: 0px) {
+  .form-login{
+    width: 90%;
+  }
+ }
+
+ @media (min-width: 576px) { 
+  .form-login{
+    width: 50%;
+  }
+  }
